--- a/docker/nginx/localhost.conf
+++ b/docker/nginx/localhost.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name laravel.local;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /var/www/html/public;
+    server_name localhost laravel.local;
+    error_log  /var/www/html/nginx/error.log;
+    access_log /var/www/html/nginx/access.log;
+    root /var/www/html/;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
