--- a/docker/nginx/localhost.conf
+++ b/docker/nginx/localhost.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost laravel.local;
+    server_name localhost;
     error_log  /var/www/html/nginx/error.log;
     access_log /var/www/html/nginx/access.log;
     root /var/www/html/;
